@@ -1,6 +1,6 @@
 Package: beachmat
-Version: 2.27.0
-Date: 2025-08-19
+Version: 2.27.1
+Date: 2025-12-13
 Title: Compiling Bioconductor to Handle Each Matrix Type
 Authors@R: c(person("Aaron", "Lun", role = c("aut", "cre"), email = "infinite.monkeys.with.keyboards@gmail.com"),
         person("Hervé", "Pagès", role="aut"),
@@ -23,7 +23,7 @@ Suggests:
     beachmat.hdf5
 LinkingTo:
     Rcpp,
-    assorthead (>= 1.3.3)
+    assorthead (>= 1.5.4)
 biocViews: DataRepresentation, DataImport, Infrastructure
 Description: 
     Provides a consistent C++ class interface for reading from a variety of commonly used matrix types. 
@@ -36,5 +36,5 @@ VignetteBuilder: knitr
 SystemRequirements: C++17
 URL: https://github.com/tatami-inc/beachmat
 BugReports: https://github.com/tatami-inc/beachmat/issues
-RoxygenNote: 7.3.2
+RoxygenNote: 7.3.3
 Encoding: UTF-8
