@@ -357,7 +357,7 @@ test_that("initialization works correctly with DelayedArray rounding", {
     am_i_ok(round(ref), ptr)
 
     z <- round(x0, 2)
-    expect_warning(ptr <- initializeCpp(z), "digits = 0")
+    expect_message(ptr <- initializeCpp(z), "digits = 0")
     am_i_ok(round(ref, 2), ptr)
 })
 
